--- a/app/src/main/res/layout/layout_manure.xml
+++ b/app/src/main/res/layout/layout_manure.xml
@@ -10,20 +10,21 @@
         android:padding="10dp"
         android:orientation="vertical">
     <!-- The manure picker header -->
-    <TextView
-        android:id="@+id/manure_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/manure_type"
-        android:textSize="22sp"
-        android:padding="5dp"
-        android:textColor="#000"/>
+    <!--<TextView-->
+        <!--android:id="@+id/manure_type"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:text="@string/manure_type"-->
+        <!--android:textSize="22sp"-->
+        <!--android:padding="5dp"-->
+        <!--android:textColor="#000"/>-->
     <!--  manure picker -->
     <LinearLayout
         android:id="@+id/manure_type_layout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="10dp"
         android:gravity="center_horizontal">
         <!-- The first option -->
         <TextView
@@ -53,8 +54,170 @@
     </LinearLayout>
 
 
+
+
+         <!--Analyzed header -->
         <TextView
-            android:id="@+id/incorp_time"
+        android:id="@+id/analysis_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/analysis_title"
+        android:textSize="20sp"
+        android:padding="5dp"
+        android:textColor="#000"/>
+          <!--analyzed picker -->
+        <LinearLayout
+            android:id="@+id/analysis_option"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal">
+            <!-- The first option -->
+            <TextView
+                android:id="@+id/analysis1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/analysis1"
+                android:gravity="center"
+                android:padding="5dp"
+                android:textColor="@color/text_green"
+                android:background="@drawable/toggle_left_button_unselected"
+                android:layout_weight="1"
+
+                android:textSize="20sp"/>
+            <!-- The second option -->
+            <TextView
+                android:id="@+id/analysis2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/analysis2"
+                android:gravity="center"
+                android:textColor="@color/text_green"
+                android:padding="5dp"
+                android:background="@drawable/toggle_right_button_unselected"
+                android:layout_weight="1"
+                android:textSize="20sp"/>
+        </LinearLayout>
+
+
+
+    <!--non analysis part-->
+
+
+        <LinearLayout
+            android:id="@+id/N_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp"
+
+            android:layout_gravity="center_horizontal">
+            <!-- The first option -->
+            <TextView
+                android:id="@+id/N_input_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/N_input_title"
+                android:padding="5dp"
+                android:textSize="18sp"
+                android:textColor="#000"/>
+            <EditText
+                android:id="@+id/N_input_edit"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/input_hint"
+                android:maxLength="3"
+                android:inputType="number" />
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/P_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+            <!-- The first option -->
+            <TextView
+                android:id="@+id/P_input_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/P_input_title"
+                android:padding="5dp"
+                android:textSize="18sp"
+                android:textColor="#000"/>
+            <EditText
+                android:id="@+id/P_input_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/input_hint"
+                android:maxLength="3"
+                android:inputType="number" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/K_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+            <!-- The first option -->
+            <TextView
+                android:id="@+id/K_input_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/K_input_title"
+                android:padding="5dp"
+                android:textSize="18sp"
+                android:textColor="#000"/>
+            <EditText
+                android:id="@+id/K_input_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/input_hint"
+                android:maxLength="3"
+                android:inputType="number" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/S_input"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+            <!-- The first option -->
+            <TextView
+                android:id="@+id/S_input_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/S_input_title"
+                android:padding="5dp"
+                android:textSize="18sp"
+                android:textColor="#000"/>
+            <EditText
+                android:id="@+id/S_input_edit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="@string/input_hint"
+                android:maxLength="3"
+                android:inputType="number" />
+
+        </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+        <TextView
+            android:id="@+id/incorp_time_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -301,35 +464,35 @@
                         android:textSize="50sp"/>
                     </LinearLayout>
 
-                <!--<LinearLayout-->
-                    <!--android:id="@+id/manure_output_group3"-->
-                    <!--android:layout_width="fill_parent"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_gravity="center_horizontal"-->
-                    <!--android:layout_weight="1"-->
-                    <!--android:background="@drawable/output_background"-->
-                    <!--android:orientation="vertical">-->
-                    <!--<TextView-->
-                        <!--android:id="@+id/S"-->
-                        <!--android:layout_width="fill_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:gravity="center_horizontal"-->
-                        <!--android:text="@string/manure_result_header3"-->
-                        <!--android:textColor="@color/S"-->
-                        <!--android:layout_weight="1"-->
-                        <!--android:padding="2dp"-->
-                        <!--android:textSize="15sp"/>-->
-                    <!--<TextView-->
-                        <!--android:id="@+id/manure_output3"-->
-                        <!--android:layout_width="fill_parent"-->
-                        <!--android:layout_height="wrap_content"-->
-                        <!--android:gravity="center_horizontal"-->
-                        <!--android:text="@string/manure_result_default3"-->
-                        <!--android:textColor="@color/S"-->
-                        <!--android:paddingBottom="10dp"-->
-                        <!--android:layout_weight="1"-->
-                        <!--android:textSize="50sp"/>-->
-                <!--</LinearLayout>-->
+                <LinearLayout
+                    android:id="@+id/manure_output_group3"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_weight="1"
+                    android:background="@drawable/output_background"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/S"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="@string/manure_result_header3"
+                        android:textColor="@color/S"
+                        android:layout_weight="1"
+                        android:padding="2dp"
+                        android:textSize="15sp"/>
+                    <TextView
+                        android:id="@+id/manure_output3"
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_horizontal"
+                        android:text="@string/manure_result_default3"
+                        android:textColor="@color/S"
+                        android:paddingBottom="10dp"
+                        android:layout_weight="1"
+                        android:textSize="50sp"/>
+                </LinearLayout>
 
 
             </LinearLayout>
